# biobuddy

./: .coveragerc  .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  setup.py
biobuddy/: __init__.py  biomechanical_model.py  biomechanical_model_real.py  contact_real.py  inertia_parameters_real.py  marker_real.py  mesh_file_real.py  mesh_real.py  muscle_group.py  muscle_real.py  range_of_motion.py  segment_coordinate_system_real.py  segment_real.py  utils.py  via_point_real.py
docs/: contributing.md  generating_gif.py  pull_request_template.md
examples/: check_muscle_lever_arms.py  convert_vtp_files.py  create_graph_from_bioMod_file.py  create_model.py  create_model_from_c3d.py  create_model_from_static_trial.py  create_rt_from_functional_trials.py  example_model_scaling.py  launch_model_editor_gui.py  launch_yeadon_measurement_editor_gui.py  merge_segments.py  model_scaling.py  muscle_moment_arm_analyzer.py  read_and_write_models.py  read_and_write_scaling_configuration.py  replace_joint_centers_functionally.py  scaling_model.py
model_readers/: osim_reader.py
scripts/: run_local_ci.ps1
tests/: test_aliases.py  test_animations.py  test_applied_examples.py  test_biomechanical_model_real.py  test_biomechanical_model_real_utils.py  test_biomod_parser.py  test_bvh_parser.py  test_bvh_to_biomod.py  test_c3d_creation_workflow.py  test_characteristics.py  test_cleaning_vtp_files.py  test_components.py  test_components_generic.py  test_components_real.py  test_example_lower_limb_calibration_c3ds.py  test_fbx_parser.py  test_fbx_to_biomod.py  test_flattening_tool.py  test_full_body_bela_template.py  test_functions.py  test_gui_main.py  test_joint_center_tool.py  test_kinematic_chain_tool.py  test_linear_algebra.py  test_marker_data.py  test_marker_editor.py  test_merge_tool.py  test_model_builder.py  test_model_creation.py  test_model_dynamics.py  test_model_editor.py  test_muscle_editor.py  test_muscle_moment_arm_analyzer.py  test_muscle_validator.py  test_named_list.py  test_osim_to_biomod.py  test_preview_interaction.py  test_preview_scene.py  (+9 more)
(+243 files in other folders)
