[build-system]
requires = [
    "setuptools", 
    "setuptools-scm", 
    "numpy", 
    "ezc3d",
    "lxml",
    "scipy",
]
build-backend = "setuptools.build_meta"

[project]
name =  "biobuddy"
description = "A generic interface to generate a virtual buddy"
dynamic = ["version"]
authors = [
    {name = "Pariterre", email = "pariterre@hotmail.com"},
    {name = "EveCharbie", email = "eve.charbonneau.1@umontreal.ca"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "ezc3d",
    "lxml",
    "scipy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "opensim",
    "biorbd",
    "pyorerun"
]

[project.urls]
Documentation = "https://github.com/pyomeca/biobuddy/tree/main#readme"
Source = "https://github.com/pyomeca/biobuddy"
Tracker = "https://github.com/pyomeca/biobuddy/issues"

[tool.setuptools]
packages = ["biobuddy"]

[tool.setuptools.dynamic]
version = {attr = "biobuddy.__version__"}

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"